igw.tf
resource "aws_internet_gateway" "gw" {
  
  vpc_id = aws_vpc.my-vpc.id

  tags = {
    Name = "${terraform.workspace}-igw"
  }
}
